fix(ui): adjust gap

--- a/src/components/Controls/controls.css
+++ b/src/components/Controls/controls.css
@@ -1,6 +1,6 @@
 .controls {
     display: flex;
-    gap: 30px;
+    gap: 20px;
     max-width: 370px;
     margin: 0 auto;
     padding: 10px 8px;
